The bug with automatic disconnect event on openshift host was foxed and some style improvements were added

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,7 +58,7 @@ li.online {
     margin-bottom: 8px;
     padding: 5px;
     border: 1px solid transparent;
-    max-width: 500px;
+    max-width: 700px;
     background-color: transparent;
 }
 .messageHeader {
